# nyc-taxi-pipeline

./: .env.example  .gitignore  .output.txt  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  destroy.yml
.hadoop-conf/: core-site.xml
airflow/: requirements.txt
airflow/dags/: nyc_taxi_ingestion_dag.py
dags/: postgres_load_dag.py  taxi_gold_dag.py  taxi_ingestion_dag.py  zone_lookup_ingestion_dag.py
docs/: AIRFLOW_LOGIN.md  ARCHITECTURE.md  DATASET.md  DATA_MODEL.md  HISTORICAL_INGESTION_GUIDE.md  HISTORICAL_STRATEGY.md  LOCAL_SETUP.md  QUICK_START.md
docs/instructions/: task.md
etl/: Dockerfile  requirements.txt
etl/jobs/: __init__.py  base_job.py
pyspark/: requirements.txt
pyspark/jobs/: base_job.py
scripts/: set_airflow_password.sh
terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: test_backfill_coverage.py  test_backfill_job.py  test_base_job.py  test_base_job_comprehensive.py  test_base_job_extended.py  test_bulk_ingestion.py  test_config.py  test_config_extended.py  test_gold_job_extended.py  test_ingestion_job_extended.py  test_jobs_validation.py  test_jobs_validation_extended.py  test_postgres_load_coverage.py  test_postgres_load_job.py  test_spark_manager.py  test_spark_manager_extended.py  test_taxi_gold_coverage.py  test_taxi_gold_job.py  test_taxi_ingestion_coverage.py  test_taxi_ingestion_job.py  test_zone_lookup_coverage.py  test_zone_lookup_extended.py  test_zone_lookup_job.py
(+28 files in other folders)
